done connect firestore

--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_register.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_register.xml
@@ -73,7 +73,6 @@
                 android:id="@+id/genderEdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:hint="@string/gender" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -130,6 +129,7 @@
                 android:id="@+id/emailEdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:hint="@string/email" />
         </com.google.android.material.textfield.TextInputLayout>
 
