--- a/Android/FitForma/FitForma/app/src/main/res/layout/fragment_search.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/fragment_search.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/search_img"
@@ -29,67 +27,42 @@
         android:id="@+id/search_scan"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:text="@string/scan"
-        android:backgroundTint="@color/red"
         android:layout_below="@id/search_text"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="25dp"
+        android:layout_toEndOf="@+id/search_gallery"
+        android:backgroundTint="@color/dark_blue"
+        android:text="@string/scan" />
+
+    <Button
+        android:id="@+id/search_gallery"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search_text"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="25dp"
+        android:backgroundTint="@color/dark_blue"
+        android:text="@string/gallery" />
+
+    <Button
+        android:id="@+id/search_start"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search_gallery"
+        android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
+        android:backgroundTint="@color/red"
+        android:text="@string/search" />
 
-    <!--    <com.google.android.material.search.SearchBar-->
-<!--        android:id="@+id/searchBar"-->
-<!--        android:layout_width="330dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginHorizontal="16dp"-->
-<!--        android:layout_marginTop="20dp"-->
-<!--        android:hint="@string/searchbar_hint"-->
-<!--        android:backgroundTint="@color/orange"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-<!--    </com.google.android.material.search.SearchBar>-->
 
-<!--    <com.google.android.material.search.SearchView-->
-<!--        android:id="@+id/searchView"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:hint="@string/searchbar_hint"-->
-<!--        android:backgroundTint="@color/orange"-->
-<!--        app:layout_anchor="@id/searchBar"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent">-->
-<!--    </com.google.android.material.search.SearchView>-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/cam_scan"-->
-<!--        android:layout_width="50dp"-->
-<!--        android:layout_height="30dp"-->
-<!--        android:layout_marginStart="-5dp"-->
-<!--        android:layout_marginBottom="25dp"-->
-<!--        android:src="@drawable/ic_camera"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/rv_food"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/searchBar"-->
-<!--        tools:ignore="MissingConstraints" />-->
-
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/rv_food"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/searchBar"-->
-<!--        tools:listitem="@layout/item_row"/>-->
-
-<!--    <ProgressBar-->
-<!--        android:id="@+id/progressBar"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
+<!--bawah ini cuman buat ngetes scannernya. dihapus aja kalo udh bisa di detail activity-->
+    <TextView
+        android:id="@+id/prediction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/search_start"
+        android:text="@string/app_name"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"/>
 
 </RelativeLayout>
