--- a/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
@@ -4,8 +4,128 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/rel1"
     tools:context=".ui.account.AccountActivity">
 
+    <RelativeLayout
+        android:id="@+id/rel2"
+        android:layout_width="405dp"
+        android:layout_height="396dp"
+        android:layout_below="@id/emailTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shadow_rec"
+        android:elevation="10dp">
+
+        <TextView
+            android:id="@+id/acc_detail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/details"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/line"
+            android:layout_width="350dp"
+            android:layout_height="5dp"
+            android:layout_below="@id/acc_detail"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/shadow_bg" />
+
+        <TextView
+            android:id="@+id/ageTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/line"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:text="@string/age"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_age"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/genderTextView"
+            android:layout_below="@+id/line"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:layout_toEndOf="@+id/ageTextView"
+            android:text="@string/tv_age"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/genderTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/ageTextView"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="@string/gender"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_gender"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/weightTextView"
+            android:layout_marginStart="150dp"
+            android:layout_marginBottom="15dp"
+            android:layout_toEndOf="@+id/ageTextView"
+            android:text="@string/tv_gender"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/weightTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/genderTextView"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="@string/weight_2"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_weight"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/heightTextView"
+            android:layout_marginStart="150dp"
+            android:layout_marginBottom="15dp"
+            android:layout_toEndOf="@+id/ageTextView"
+            android:text="@string/tv_weight"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/heightTextView"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/weightTextView"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:padding="10dp"
+            android:text="@string/height_2"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/tv_height"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_weight"
+            android:layout_marginStart="151dp"
+            android:layout_marginTop="24dp"
+            android:layout_toEndOf="@+id/heightTextView"
+            android:text="@string/tv_height"
+            android:textSize="18sp" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/usernameTextView"
@@ -22,126 +142,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/email"
-        android:textSize="14sp"
+        android:textSize="16sp"
         android:layout_below="@id/usernameTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"/>
 
-    <TextView
-        android:id="@+id/acc_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/emailTextView"
-        android:layout_marginTop="30dp"
-        android:layout_marginStart="50dp"
-        android:textStyle="bold"
-        android:text="@string/details"/>
-
-    <ImageView
-        android:id="@+id/line"
-        android:layout_width="350dp"
-        android:layout_height="5dp"
-        android:layout_below="@id/acc_detail"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/shadow_bg"/>
-
-    <TextView
-        android:id="@+id/ageTextView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/line"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:text="@string/age"
-        android:textSize="18sp"/>
-
-    <TextView
-        android:id="@+id/tv_age"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/genderTextView"
-        android:layout_below="@+id/line"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toEndOf="@+id/ageTextView"
-        android:text="@string/tv_age"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/genderTextView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/ageTextView"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="@string/gender"
-        android:textSize="18sp"/>
-    <TextView
-        android:id="@+id/tv_gender"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/weightTextView"
-        android:layout_marginStart="150dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toEndOf="@+id/ageTextView"
-        android:textSize="18sp"
-        android:text="@string/tv_gender" />
-
-    <TextView
-        android:id="@+id/weightTextView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/genderTextView"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="@string/weight_2"
-        android:textSize="18sp"/>
-    <TextView
-        android:id="@+id/tv_weight"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/heightTextView"
-        android:layout_marginStart="150dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toEndOf="@+id/ageTextView"
-        android:textSize="18sp"
-        android:text="@string/tv_weight" />
-
-    <TextView
-        android:id="@+id/heightTextView"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/weightTextView"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        android:text="@string/height_2"
-        android:textSize="18sp"/>
-    <TextView
-        android:id="@+id/tv_height"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/logoutBtn"
-        android:layout_marginStart="150dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toEndOf="@+id/ageTextView"
-        android:textSize="18sp"
-        android:text="@string/tv_height" />
 
     <Button
         android:id="@+id/logoutBtn"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="@string/logout"
-        android:backgroundTint="@color/red"
-        android:layout_below="@id/heightTextView"
+        android:layout_below="@+id/rel2"
+        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"/>
+        android:backgroundTint="@color/red"
+        android:text="@string/logout" />
 
 
 </RelativeLayout>
