--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_after_regis.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_after_regis.xml
@@ -22,31 +22,35 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/category_textView"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="-20dp"
+        android:layout_marginTop="-25dp"
         android:textSize="35sp"
+        android:textColor="@color/orange"
         android:textStyle="bold"
         android:text="@string/bmi"/>
+
 
     <TextView
         android:id="@+id/advice_textView"
         android:layout_width="277dp"
-        android:layout_height="75dp"
+        android:layout_height="50dp"
         android:layout_below="@id/tv_bmi_category"
         android:layout_marginStart="40dp"
         android:layout_marginTop="30dp"
         android:text="@string/advice"
         android:textSize="25sp"
         android:textStyle="bold" />
+
     <TextView
         android:id="@+id/tv_advice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="326dp"
+        android:layout_height="71dp"
         android:layout_below="@id/advice_textView"
         android:layout_marginStart="40dp"
         android:layout_marginTop="-15dp"
+        android:text="@string/maintain"
+        android:textColor="@color/orange"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:text="@string/maintain"/>
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/gl_textView"
@@ -61,7 +65,7 @@
 
     <Button
         android:id="@+id/next_btn"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/gl_textView"
         android:layout_centerHorizontal="true"
