--- a/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
@@ -156,7 +156,8 @@
         android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:backgroundTint="@color/red"
-        android:text="@string/logout" />
+        android:text="@string/logout"
+        android:elevation="10dp"/>
 
 
 </RelativeLayout>
