--- a/Android/FitForma/FitForma/app/src/main/res/layout/fragment_search.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/fragment_search.xml
@@ -56,13 +56,13 @@
 
 
 <!--bawah ini cuman buat ngetes scannernya. dihapus aja kalo udh bisa di detail activity-->
-    <TextView
-        android:id="@+id/prediction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/search_start"
-        android:text="@string/app_name"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="30dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/prediction"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@id/search_start"-->
+<!--        android:text="@string/app_name"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:layout_marginStart="30dp"/>-->
 
 </RelativeLayout>
