--- a/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/fragment_account.xml
@@ -49,13 +49,13 @@
 
         <TextView
             android:id="@+id/tv_age"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
+            android:layout_width="107dp"
+            android:layout_height="60dp"
             android:layout_above="@+id/genderTextView"
             android:layout_below="@+id/line"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginBottom="1dp"
             android:layout_toEndOf="@+id/ageTextView"
             android:text="@string/tv_age"
             android:textSize="18sp" />
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/weightTextView"
             android:layout_marginStart="150dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="10dp"
             android:layout_toEndOf="@+id/ageTextView"
             android:text="@string/tv_gender"
             android:textSize="18sp" />
@@ -99,7 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/heightTextView"
             android:layout_marginStart="150dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="12dp"
             android:layout_toEndOf="@+id/ageTextView"
             android:text="@string/tv_weight"
             android:textSize="18sp" />
@@ -121,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_weight"
             android:layout_marginStart="151dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="40dp"
             android:layout_toEndOf="@+id/heightTextView"
             android:text="@string/tv_height"
             android:textSize="18sp" />
