--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_detail.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_detail.xml
@@ -15,13 +15,22 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
+    <Button
+        android:id="@+id/PredictBtn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Predict"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/detail_img" />
 
     <TextView
         android:id="@+id/detail_name"
         android:layout_width="350dp"
         android:layout_height="40dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="33dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="72dp"
         android:text="@string/name"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -32,12 +41,12 @@
         android:id="@+id/food_weight"
         android:layout_width="75dp"
         android:layout_height="37dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shadow_bg"
         android:gravity="center"
         android:text="@string/food_weight"
         android:textStyle="bold"
-        android:background="@drawable/shadow_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_name" />
 
@@ -45,12 +54,12 @@
         android:id="@+id/food_kal"
         android:layout_width="75dp"
         android:layout_height="37dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shadow_bg"
         android:gravity="center"
         android:text="@string/food_kal"
         android:textStyle="bold"
-        android:background="@drawable/shadow_bg"
         app:layout_constraintStart_toEndOf="@+id/food_weight"
         app:layout_constraintTop_toBottomOf="@+id/detail_name" />
 
@@ -59,12 +68,13 @@
         android:layout_width="75dp"
         android:layout_height="37dp"
         android:layout_marginStart="35dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shadow_bg"
         android:gravity="center"
         android:text="@string/food_karbo"
         android:textStyle="bold"
-        android:background="@drawable/shadow_bg"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.728"
         app:layout_constraintStart_toEndOf="@+id/food_kal"
         app:layout_constraintTop_toBottomOf="@+id/detail_name" />
 
@@ -72,8 +82,8 @@
         android:id="@+id/detail_desc"
         android:layout_width="350dp"
         android:layout_height="300dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="12dp"
         android:text="@string/description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/food_kal" />
