--- a/Android/FitForma/FitForma/app/src/main/res/layout/activity_after_regis.xml
+++ b/Android/FitForma/FitForma/app/src/main/res/layout/activity_after_regis.xml
@@ -18,15 +18,15 @@
 
     <TextView
         android:id="@+id/tv_bmi_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="266dp"
+        android:layout_height="62dp"
         android:layout_below="@id/category_textView"
         android:layout_marginStart="40dp"
         android:layout_marginTop="-25dp"
-        android:textSize="35sp"
+        android:text="@string/bmi"
         android:textColor="@color/orange"
-        android:textStyle="bold"
-        android:text="@string/bmi"/>
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
 
     <TextView
